# aide-axum-typed-multipart-2

./: Cargo.toml  LICENSE-Apache  README.md
src/: lib.rs
